# Clash-Royale-API-v2

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.pipeline  Dockerfile.pipeline.dockerignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build-and-push.yml
database/: Dockerfile  entrypoint.sh  start.sql
dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: clean.sql
extract/: extract.py  run_pipeline.sh
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
infra/: .gitignore  README.md  alloy-live-apply.sh  budget.tf  cicd.tf  compute.tf  dns.tf  network.tf  outputs.tf  providers.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/bootstrap/: main.tf
infra/grafana/: clashroyale-api.json  clashroyale-host.json  clashroyale-logs.json  clashroyale-pipeline.json  clashroyale-usage.json
infra/scripts/: cr-pipeline.sh
infra/templates/: cloud-init.yaml.tftpl
marimo/: cards.parquet  globaltournaments.parquet  leaderboards.parquet  locations.parquet  pol_battlelog_extract.py  testing_cr_api.py
src/: db.rs  error.rs  main.rs  routes.rs
src/models/: arena.rs  battle.rs  battle_deck_card.rs  battle_participant.rs  battle_support_card.rs  card.rs  card_meta.rs  card_pair.rs  clan.rs  deck_matchups.rs  deck_meta.rs  game_mode.rs  mod.rs  player.rs  pol_ranking.rs  support_card.rs
src/repos/: arena_repo.rs  battle_repo.rs  card_repo.rs  clan_repo.rs  deck_matchups.rs  deck_repo.rs  game_mode_repo.rs  mod.rs  player_repo.rs  (+2 more)
(+102 files in other folders)
