[package]
name = "ClashRoyale"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
async-duckdb = "0.3.1"
duckdb = { version = "1.10503.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
