[project]
name = "clashroyale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.29",
    "dbt-duckdb>=1.10.1",
    "duckdb==1.5.2",
    "marimo>=0.23.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.1",
    "sqlglot>=30.8.0",
]
